--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,8 @@
 flags:
   hakyll:
-    previewserver: false
+    previewserver: true
 extra-package-dbs: []
 packages:
 - '.'
 extra-deps:
-- hakyll-4.8.3.2
-resolver: lts-7.0
+resolver: lts-12.26
