--- a/blog2.cabal
+++ b/blog2.cabal
@@ -7,5 +7,6 @@ executable site
   main-is:          site.hs
   build-depends:    base == 4.*
                   , hakyll
+                  , time
   ghc-options:      -threaded
   default-language: Haskell2010
